--- a/index.Rmd
+++ b/index.Rmd
@@ -34,6 +34,10 @@ output:
 
 ```{r setup, include=FALSE}
 library(forcats)
+
+#read canlang data from GitHub and place it in the data directory
+can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst/extdata/can_lang.csv") %>% 
+  readr::write_csv("data/can_lang.csv")
 ```
 
 # R, Jupyter, and the tidyverse
