--- a/index.Rmd
+++ b/index.Rmd
@@ -108,12 +108,12 @@ Often, the first thing we need to do in data analysis is to load a dataset into 
 The first kind of data we will learn how to load into R (as a data frame) is the 
 spreadsheet-like *comma-separated values* format (`.csv` for short).
 These files have names ending in `.csv`, and can be opened open and saved from common spreadsheet programs like Microsoft Excel and Google Sheets. 
-For example, a `.csv` file named `state_property_vote.csv` [is included with the code for this book](https://github.com/UBC-DSCI/introduction-to-datascience/blob/master/data/state_property_vote.csv). 
-This file--- originally from [Data USA](https://datausa.io/)---has US state-level property, income, population and voting data from 2015 and 2016. 
+For example, a `.csv` file named `can_lang.csv` [is included with the code for this book](https://github.com/UBC-DSCI/introduction-to-datascience/blob/master/data/can_lang.csv). 
+This file--- originally from [{canlang} R data package](https://datausa.io/)---has language data collected in the 2016 Canadian census. 
 If we were to open this data in a plain text editor, we would see each row on its own line, and each entry in the table separated by a comma:
 
 ```{bash, echo=FALSE, comment=NA}
-head -n 10 data/state_property_vote.csv
+head -n 10 data/can_lang.csv
 ```
 
 To load this data into R, and then to do anything else with it afterwards, we will need to use something called a *function.* 
@@ -130,14 +130,14 @@ Below you'll see the code used to load the data into R using the `read_csv` func
 to be able to use it we have to load it from somewhere else: a collection of useful functions known as a *library*. The `read_csv` function in particular
 is in the `tidyverse` library (more on this later), which we load using the `library` function.
 
-Next, we call the `read_csv` function and pass it a single argument: the name of the file, `"state_property_vote.csv"`. We have to put quotes around filenames and other letters and words that we 
+Next, we call the `read_csv` function and pass it a single argument: the name of the file, `"can_lang.csv"`. We have to put quotes around filenames and other letters and words that we 
 use in our code to distinguish it from the special words that make up R programming language.  This is the only argument we need to provide for this file, because our file satifies everthing else 
 the `read_csv` function expects in the default use-case (which we just discussed). Later in the course, we'll learn more about how to deal with more complicated files where the default arguments are not 
 appropriate. For example, files that use spaces or tabs to separate the columns, or with no column names.
 
 ```{r load_state_property_data, warning=FALSE, message=FALSE}
 library(tidyverse)
-read_csv("data/state_property_vote.csv")
+read_csv("data/can_lang.csv")
 ```
 Above you can also see something neat that Jupyter does to help us understand our code: it colours text depending on its meaning in R. For example, 
 you'll note that functions get bold green text, while letters and words surrounded by quotations like filenames get blue text.
@@ -148,7 +148,7 @@ you'll note that functions get bold green text, while letters and words surround
 
 ## Assigning value to a data frame
 
-When we loaded the US state-level property, income, population, and voting data in R above using `read_csv`, we did not give this data frame a name, so it was 
+When we loaded the language data collected in the 2016 Canadian census in R above using `read_csv`, we did not give this data frame a name, so it was 
 just printed to the screen and we cannot do anything else with it. That isn't very useful; what we would like to do is give a name to the data frame that `read_csv` outputs
 so that we can use it later for analysis and visualization. 
 
@@ -157,10 +157,10 @@ the assignment symbol is preferred and is what we will use in this course. When 
 it with quotes like the filename. This is because we are formally telling R about this word and giving it a value. Only characters and words that act as values need 
 to be surrounded by quotes.
 
-Let's now use the assignment symbol to give the name `us_data` to the US state-level property, income, population, and voting data frame that we get from `read_csv`.
+Let's now use the assignment symbol to give the name `can_lang` to the language data collected in the 2016 Canadian census data frame that we get from `read_csv`.
 
 ```{r load_data_with_name, message=FALSE}
-us_data <- read_csv("data/state_property_vote.csv")
+can_lang <- read_csv("data/can_lang.csv")
 ```
 
 Wait a minute! Nothing happened this time! Or at least it looks like that. But actually something did happen: the data was read in and now has the name `us_data` associated with it. 
@@ -168,7 +168,7 @@ And we can use that name to access the data frame and do things with it. First w
 
 
 ```{r print}
-us_data
+can_lang
 ```
 
 ## Creating subsets of data frames with `select` & `filter`
@@ -176,43 +176,42 @@ us_data
 Now, we are going to learn how to obtain subsets of data from a data frame in R using two other `tidyverse` functions: `select` and `filter`. 
 The `select` function allows you to create a subset of the columns of a data frame, while the `filter` function allows you to obtain a subset of the rows with specific values.
 
-Before we start using `select` and `filter`, let's take a look at the US state-level property, income, and population data again to familiarize ourselves with it. 
+Before we start using `select` and `filter`, let's take a look at the language data collected in the 2016 Canadian census again to familiarize ourselves with it. 
 We will do this by printing the data we loaded earlier in the chapter to the screen. 
 
 ```{r print_data_again}
-us_data
+can_lang
 ```
 
 
-In this data frame there are 52 rows (corresponding to the 50 US states, the District of Columbia and the US territory, Puerto Rico)
+In this data frame there are 214 rows rows (corresponding to the 214 languages recorded on the 2016 Canadian census)
 and 6 columns: 
 
-1. US state name
-2. Population
-3. Median property value
-4. Median household income
-5. Average commute time in minutes
-6. The party each state voted for in the 2016 US presidential election
+1. `category`: Higher level language category (describing whether the language is an Official Canadian language, an Aboriginal language, or a Non-Official and Non-Aboriginal language).
+2. `language`: Language queried about on the Canadian Census.
+3. `mother_tongue`: Total Count of Canadians from the Census who reported the language as their mother tongue. Mother tongue is generally defined as the language someone was exposed to since birth.
+4. `most_at_home`: Total Count of Canadians from the Census who reported the language as spoken most often at home.
+5. `most_at_work`: Total Count of Canadians from the Census who reported the language as used most often at work for the population.
+6. `lang_known`: Total Count of Canadians from the Census who reported knowledge of language for the population in private households.
 
-
-Now let's use `select` to extract the state column from this data frame. To do this, we need to provide the `select` function with two arguments. The first argument is the 
-name of the data frame object, which in this example is `us_data`. The second argument is the column name that we want to select, here `state`. After passing these two arguments,
-the  `select` function returns a single column (the state column that we asked for) as a data frame.
+Now let's use `select` to extract the language column from this data frame. To do this, we need to provide the `select` function with two arguments. The first argument is the 
+name of the data frame object, which in this example is `can_lang`. The second argument is the column name that we want to select, here `language`. After passing these two arguments,
+the  `select` function returns a single column (the `language` column that we asked for) as a data frame.
 
 
 ```{r}
-state_column <- select(us_data, state)
-state_column
+language_column <- select(can_lang, language)
+language_column
 ```
 
 
 ### Using `select` to extract multiple columns
 
 We can also use `select` to obtain a subset of the data frame with multiple columns. Again, the first argument is the name of the data frame. 
-Then we list all the columns we want as arguments separated by commas. Here we create a subset of three columns: state, median property value, and mean commute time in minutes.
+Then we list all the columns we want as arguments separated by commas. Here we create a subset of three columns: language, mother tongue, and language spoken most often at home.
 
 ```{r}
-three_columns <- select(us_data, state, med_prop_val, avg_commute)
+three_columns <- select(can_lang, language, mother_tongue, most_at_home)
 three_columns
 ```
 
@@ -220,40 +219,39 @@ three_columns
 ### Using `select` to extract a range of columns
 
 We can also use `select` to obtain a subset of the data frame constructed from a range of columns. To do this we use the colon (`:`) operator to denote the range. 
-For example, to get all the columns in the data frame from `state` to `med_prop_val` we pass `state:med_prop_val` as the second argument to the `select` function.
+For example, to get all the columns in the data frame from `language` to `most_at_home` we pass `language:most_at_home` as the second argument to the `select` function.
 
 ```{r}
-column_range <- select(us_data, state:med_prop_val)
+column_range <- select(can_lang, language:most_at_home)
 column_range
 ```
 
 ### Using `filter` to extract a single row
 
-We can use the `filter` function to obtain the subset of rows with desired values from a data frame. Again, our first argument is the name of the data frame object, `us_data`. 
-The second argument is a logical statement to use when filtering the rows. Here, for example, we'll say that we are interested in rows where the state is New York. To make 
-this comparison, we use the *equivalency operator* `==` to compare the values of the `state` column with the value `"New York"`. Similar to when we loaded the data file and put quotes around the filename, 
-here we need to put quotes around `"New York"` to tell R that this is a character value and not one of the special words that make up R programming language, nor one of the names 
+We can use the `filter` function to obtain the subset of rows with desired values from a data frame. Again, our first argument is the name of the data frame object, `can_lang`. 
+The second argument is a logical statement to use when filtering the rows. Here, for example, we'll say that we are interested in rows where the language is Mandarin. To make 
+this comparison, we use the *equivalency operator* `==` to compare the values of the `language` column with the value `"Mandarin"`. Similar to when we loaded the data file and put quotes around the filename, 
+here we need to put quotes around `"Mandarin"` to tell R that this is a character value and not one of the special words that make up R programming language, nor one of the names 
 we have given to data frames in the code we have already written.
 
 With these arguments, `filter` returns a data frame that has all the columns of the input data frame but only the rows we asked for in our logical filter statement. 
 
 ```{r}
-new_york <- filter(us_data, state == "New York")
-new_york
+mandarin <- filter(can_lang, language == "Mandarin")
+mandarin
 ```
 
 ### Using `filter` to extract rows with values above a threshold
 
 
-If we are interested in finding information about the states who have a higher median household income
- than New York---whose median household income is \$58,771---then we can create a filter 
-to obtain rows where the value of `med_income` is greater than 58771.
+If we are interested in finding information about the languages who have a higher number of people who primarily speak it at home compared to Mandarin---which is reported to have 462890 people speaking it as the primary language they speak in their home---then we can create a filter 
+to obtain rows where the value of `most_at_home` is greater than 462890.
 In this case, we see that `filter` returns a data frame with 16 rows; this indicates that there are 16 
 states with higher median household incomes than New York.
 
 ```{r}
-high_incomes <- filter(us_data, med_income > 58771)
-high_incomes
+spoke_often_at_home <- filter(can_lang, most_at_home > 462890)
+spoke_often_at_home
 ```
 
 
@@ -261,22 +259,19 @@ high_incomes
 
 Creating effective data visualizations is an essential piece to any data analysis. For the remainder of Chapter 1, we will learn how to use
 functions from the `tidyverse` to make visualizations that let us explore relationships in data. In particular, we'll develop a visualization
-of the US property, income, population, and voting data we've been working with that will help us understand two potential relationships in the data:
-first, the relationship between median household income and median propery value across the US, and second, whether there is a pattern in which party each state 
-voted for in the 2016 US election. This is an example of an exploratory data analysis 
+of the language data collected in the 2016 Canadian census we've been working with that will help us understand two potential relationships in the data:
+first, the relationship between the number of people who speak a language as their mother tongue and the number of people who speak that language as their primary spoken language at home, and second, whether there is a pattern in the strength of this relationship in the higher level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages). This is an example of an exploratory data analysis 
 question: we are looking for relationships and patterns within the data set we have, but are not trying to generalize what we find beyond this data set. 
 
 ### Using `ggplot` to create a scatter plot
 
-Taking another look at our dataset below, we can immediately see that the three columns (or variables) we are interested in visualizing---median household 
-income, median property value, and election result---are all in separate columns. In addition, there is a single row (or observation) for each state. 
+Taking another look at our data set below, we can immediately see that the three columns (or variables) we are interested in visualizing---mother tongue, language spoken most at home, and higher level language category---are all in separate columns. In addition, there is a single row (or observation) for each language. 
 The data are therefore in what we call a *tidy data* format. 
 This is particularly important and will be a major focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, 
-including the `ggplot` function that we will use shortly for our visualization. Note below that we use the `print` function to display the `us_data` rather
-than just typing `us_data`; for data frames, these do the same thing.
+including the `ggplot` function that we will use shortly for our visualization. 
 
 ```{r}
-print(us_data)
+can_lang
 ```
 
 ### Using `ggplot` to create a scatter plot
@@ -291,8 +286,8 @@ To create a scatter plot of these two variables using the `ggplot` function, we 
 5. call the `geom_point` function to tell R that we want to represent the data points as dots/points to create a scatter plot.
 
 <center>
-```{r prop_val_vs_income, fig.width=4.75, fig.height=4, warning=FALSE}
-ggplot(us_data, aes(x = med_income, y = med_prop_val)) +
+```{r mother_tongue_vs_most_at_home, fig.width=5.75, fig.height=5, warning=FALSE}
+ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
     geom_point()
 ``` 
 </center>
@@ -308,101 +303,116 @@ ggplot(us_data, aes(x = med_income, y = med_prop_val)) +
 
 One common and easy way to format your `ggplot` visualization is to add additional layers to the plot object using the `+` symbol. 
 For example, we can use the `xlab` and `ylab` functions to add layers where we specify human readable labels for the x and y axes. 
-Again, since we are specifying words (e.g. `"Income (USD)"`) as arguments to `xlab` and `ylab`, we surround them with double quotes.
+Again, since we are specifying words (e.g. `"Mother tongue (number of Canadian residents)"`) as arguments to `xlab` and `ylab`, we surround them with double quotes.
 There are many more layers we can add to format the plot further, and we will explore these in later chapters.
 
 <center>
-```{r prop_val_vs_income_human_labs, fig.width=4.75, fig.height=4, warning=FALSE}
-ggplot(us_data, aes(x = med_income, y = med_prop_val)) +
+```{r mother_tongue_vs_most_at_home_labs, fig.width=5.75, fig.height=5, warning=FALSE}
+ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
     geom_point() +
-    xlab("Income (USD)") +
-    ylab("Median property value (USD)")    
+    xlab("Language spoken most at home (number of Canadian residents)") +
+    ylab("Mother tongue (number of Canadian residents)")    
 ```
 </center>
 
-From this visualization we see that for the 52 US regions in this data set, as median household income increases so does median property value. When we see 
+Most of the data points from the 214 observations in this data set are bunched up in the lower left-handside of this visualization. This is because many many more people in Canada speak the two official languages (English and French). Thus to answer our question, we will need to adjust the scale of the x and y axes so that they are on a log scale. We can again add additional layers to the plot object using the `+` symbol to do this:
+
+```{r mother_tongue_vs_most_at_home_scale, fig.width=5.75, fig.height=5, warning=FALSE}
+ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
+  geom_point() +
+  xlab("Language spoken most at home (number of Canadian residents)") +
+  ylab("Mother tongue (number of Canadian residents)") +
+  scale_x_log10(labels = scales::comma) +
+  scale_y_log10(labels = scales::comma)
+```
+
+From this visualization we see that for the 214 languages in this data set, as the number of people who have a language as their mother tongue increases, so does the number of people who speak that language at home. When we see 
 two variables do this, we call this a *positive relationship*. Because the increasing pattern is fairly clear 
-(not fuzzy) we can say that the relationship is strong. Because of the data point in the lower left-hand corner, drawing a straight line through these 
-points wouldn't fit very well. When a straight-line doesn't fit the data well we say that it's non-linear. However, we should have caution when using one point to claim non-linearity. As we will see later, this might be due to a single point not really belonging in the data set (this is often called an outlier).
+(not fuzzy) we can say that the relationship is strong. Because drawing a straight line through these 
+points would fit the pattern we observe quite well, we say that it's linear.
 
 Learning how to describe data visualizations is a very useful skill. We will provide descriptions for you in this course (as we did above) until we get to Chapter 4, 
 which focuses on data visualization. Then, we will explicitly teach you how to do this yourself, and how to not over-state or over-interpret the results 
 from a visualization.
 
 ### Coloring points by group
-Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between median household income and median property 
-value, is there a pattern in which party each state voted for in the 2016 US election? One common way to explore this is to colour the data points on the 
+Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points on the 
 scatter plot we have already created by group/category. For example,
-given that we have the party each state voted for in the 2016 US Presidential election in the column named `party`, we can colour the points in our previous 
-scatter plot to represent who each stated voted for. 
+given that we have the higher level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
+scatter plot to represent the higher level language category each language belongs to. 
 
-To do this we modify our scatter plot code above. Specifically, we will add an argument to the `aes` function, specifying that the points should be coloured by the `party` column:
-
-```{r relevel factors for colour, include=FALSE}
-us_data <- us_data %>% mutate(party = factor(party, levels = c("Republican", "Not Applicable", "Democratic")))
-```
+To do this we modify our scatter plot code above. Specifically, we will add an argument to the `aes` function, specifying that the points should be coloured by the `category` column:
 
 <center>
-```{r scatter_colour_by_party, fig.width=5.75, fig.height=4, warning=FALSE}
-ggplot(us_data, aes(x = med_income, y = med_prop_val, color = party)) +
+```{r scatter_colour_by_category, fig.width=7.75, fig.height=4, warning=FALSE}
+ggplot(can_lang, aes(x = most_at_home, y = mother_tongue, color = category)) +
   geom_point() +
-  xlab("Income (USD)") +
-  ylab("Median property value (USD)")
+  xlab("Language spoken most at home (number of Canadian residents)") +
+  ylab("Mother tongue (number of Canadian residents)") +
+  scale_x_log10(labels = scales::comma) +
+  scale_y_log10(labels = scales::comma)
 ```
 </center>
 
-This data visualization shows that the one data point we singled out earlier on the far left of the plot has the label of "not applicable" instead of "democrat" or "republican". 
-Let's use filter to look at the row that contains the "not applicable" value in the party column:
+This data visualization shows that there a few languages where no one in Canada has reported it the language they speak most at home, let's use filter to look at the row that contains these values:
 
 ```{r}
-missing_party <- filter(us_data, party == "Not Applicable")
-missing_party
+no_most_at_home <- filter(can_lang, most_at_home == 0)
+no_most_at_home
 ```
 
 
-That explains it! That row in the dataset is actually not a US state, but rather the US territory of Peurto Rico. Similar to other US territories, residents of Puerto Rico 
-cannot vote in presidential elections. Hence the "not applicable" label. Let's remove this row from the data frame and rename the data frame `vote_data`. 
+Let's remove these rows from the data frame`. 
 To do this, we use the opposite of the equivalency operator (`==`) for our filter statement, the not equivalent operator (`!=`).
 
 ```{r}
-vote_data <- filter(us_data, party != "Not Applicable")
-vote_data
+can_lang_filtered <- filter(can_lang, most_at_home != 0)
+can_lang_filtered
 ```
 
-Now we see that the data frame has 51 rows corresponding to the 50 states and the District of Columbia - all regions where residents can vote in US presidential elections. 
+Now we see that the data frame has 211 instead of 214. 
 Let's now recreate the scatter plot we made above using this data frame subset:
 
-```{r scatter_colour_by_party_no_PR, fig.width=5.75, fig.height=4, warning=FALSE}
-ggplot(vote_data, aes(x = med_income, y = med_prop_val, color = party)) +
+```{r scatter_colour_by_category_filtered, fig.width=7.75, fig.height=4, warning=FALSE}
+ggplot(can_lang_filtered, aes(x = most_at_home, y = mother_tongue, color = category)) +
   geom_point() +
-  xlab("Income (USD)") +
-  ylab("Median property value (USD)")
+  xlab("Language spoken most at home (number of Canadian residents)") +
+  ylab("Mother tongue (number of Canadian residents)") +
+  scale_x_log10(labels = scales::comma) +
+  scale_y_log10(labels = scales::comma)
 ```
 
-What do we see when considering the second part of our exploratory question? Do we see a pattern in how certain states voted in the 2016 Presidential election? We do! 
-Most of the US States who voted for the Republican candidate in the 2016 US Presidential election had lower median household income and lower median property values (data points primarily 
-fall in lower left-hand side of the scatter plot), whereas most of the US states who voted for the Democratic candidate in the 2016 US Presidential election had higher median household 
-income and higher median property values (data points primarily fall in the upper right-hand side of the scatter plot).
+What do we see when considering the second part of our exploratory question? Do we see a pattern in the relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home for the different higher-level language categories? Probably not! 
 
-Does this mean that rich states usually vote for Democrats and poorer states generally vote for Republicans? Or could we use this data visualization on its own to predict which party each 
-state will vote for in the next presidential election? The answer to both these questions is "no." What we can do with this exploratory data analysis is create new hypotheses, ideas, 
+For each higher-level language category there appears to be a positive relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home. This relationship looks similar, regardless of the category. 
+
+Does this mean that the relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home is positive for all languages in the world? Or could we use this data visualization on its own to predict how many people have a given language as their mother tongue if we know how many people speak it as their primarly language at home?
+
+The answer to both these questions is "no." What we can do with this exploratory data analysis is create new hypotheses, ideas, 
 and questions (like the ones at the beginning of this paragraph). Answering those questions would likely involve gathering additional data and doing more complex analyses, which we will 
 see more of later in this course.  
 
 ### Putting it all together
 
-Below, we put everything from this chapter together in one code chunk. This demonstrates the power of R: in relatively few lines of code, we are able to create an entire data science workflow.
+Below, we put everything from this chapter together in one code chunk, with a few more layers to make the data visualization even more effective. This demonstrates the power of R: in relatively few lines of code, we are able to create an entire data science workflow.
 
-```{r nachos_to_cheesecake, fig.width=5.75, fig.height=4, warning=FALSE, message=FALSE}
+```{r nachos_to_cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE}
 library(tidyverse)
 
-us_data <- read_csv("data/state_property_vote.csv")
+can_lang <- read_csv("data/can_lang.csv")
 
-vote_data <- filter(us_data, party != "Not Applicable")
+can_lang_filtered <- filter(can_lang, most_at_home != 0)
 
-ggplot(vote_data, aes(x = med_income, y = med_prop_val, color = party)) +
-  geom_point() +
-  xlab("Income (USD)") +
-  ylab("Median property value (USD)")
+ggplot(can_lang_filtered, aes(x = most_at_home, 
+                     y = mother_tongue, 
+                     color = category,
+                     shape = category)) +
+  geom_point(alpha = 0.7) +
+  scale_color_manual(values = c("blue3","red3","black")) +
+  xlab("Language spoken most at home (number of Canadian residents)") +
+  ylab("Mother tongue (number of Canadian residents)") +
+  scale_x_log10(labels = scales::comma) +
+  scale_y_log10(labels = scales::comma) +
+  theme_bw()
 ```
 
