--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -88,8 +88,8 @@ Let's start with an illustrative (and tasty!) example. Timbits are
 bite-sized doughnuts sold at Tim Hortons, a popular Canadian-based fast-food restaurant
 chain founded in Hamilton, Ontario, Canada. 
 
-```{r 11-timbits-picture, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Timbits. Source: wikimedia.org", fig.retina = 2, out.width = "50%"}
-knitr::include_graphics("https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Timbits2.jpg/1600px-Timbits2.jpg")
+```{r 11-timbits-picture, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A box of Timbits", fig.retina = 2, out.width = "50%"}
+knitr::include_graphics("img/timbits.jpg")
 ```
 
 
@@ -522,8 +522,8 @@ For a sample of size $n$, the process we will go through is as follows:
 6. Repeat steps (1) - (5) many times to create a distribution of point estimates (the bootstrap distribution)
 7. Calculate the plausible range of values around our observed point estimate
 
-```{r 11-intro-bootstrap-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Overview of the bootstrap process", fig.retina = 2, out.width="60%"}
-knitr::include_graphics("img/intro-bootstrap.svg")
+```{r 11-intro-bootstrap-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Overview of the bootstrap process", fig.retina = 2, out.width="880"}
+knitr::include_graphics("img/intro-bootstrap.jpeg")
 ```
 ### Bootstrapping in R 
 Let's continue working with our Airbnb data. Once again,  let's say we are interested in estimating the population mean price per night of all Airbnb listings in
