--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -29,6 +29,7 @@ By the end of the chapter, students will be able to:
 - list the tables in a database using the `DBI` library's `dbListTables` function
 - create a reference to a database table that is queriable using the `tbl` from the `dbplyr` library
 - retrieve data from a database query and bring it into R using the `collect` function from the `dbplyr` library
+- use `write_csv` to save a data frame to a `.csv` file
 
 - (*optional*) scrape data from the web
     - read/scrape data from an internet URL using the rvest `html_nodes` and `html_text` functions
