fixed reference to new york in filter call

--- a/index.Rmd
+++ b/index.Rmd
@@ -246,8 +246,8 @@ mandarin
 
 If we are interested in finding information about the languages who have a higher number of people who primarily speak it at home compared to Mandarin---which is reported to have 462890 people speaking it as the primary language they speak in their home---then we can create a filter 
 to obtain rows where the value of `most_at_home` is greater than 462890.
-In this case, we see that `filter` returns a data frame with 16 rows; this indicates that there are 16 
-states with higher median household incomes than New York.
+In this case, we see that `filter` returns a data frame with 2 rows; this indicates that there are two languages that are spoken more often at
+home compared to Mandarin.
 
 ```{r}
 spoke_often_at_home <- filter(can_lang, most_at_home > 462890)
