added that we will formally introduce tidy data in chapter 3

--- a/index.Rmd
+++ b/index.Rmd
@@ -267,8 +267,8 @@ question: we are looking for relationships and patterns within the data set we h
 
 Taking another look at our data set below, we can immediately see that the three columns (or variables) we are interested in visualizing---mother tongue, language spoken most at home, and higher level language category---are all in separate columns. In addition, there is a single row (or observation) for each language. 
 The data are therefore in what we call a *tidy data* format. 
-This is particularly important and will be a major focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, 
-including the `ggplot` function that we will use shortly for our visualization. 
+Tidy data is particularly important concept and will be a major focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, 
+including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
 
 ```{r}
 can_lang
