Changed language to that points being close together

--- a/index.Rmd
+++ b/index.Rmd
@@ -327,8 +327,7 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
 ```
 
 From this visualization we see that for the 214 languages in this data set, as the number of people who have a language as their mother tongue increases, so does the number of people who speak that language at home. When we see 
-two variables do this, we call this a *positive relationship*. Because the increasing pattern is fairly clear 
-(not fuzzy) we can say that the relationship is strong. Because drawing a straight line through these 
+two variables do this, we call this a *positive relationship*. Because the points are fairly close together, we can say that the relationship is strong. Because drawing a straight line through these 
 points would fit the pattern we observe quite well, we say that it's linear.
 
 Learning how to describe data visualizations is a very useful skill. We will provide descriptions for you in this course (as we did above) until we get to Chapter 4, 
