--- a/index.Rmd
+++ b/index.Rmd
@@ -163,7 +163,7 @@ Let's now use the assignment symbol to give the name `can_lang` to the language 
 can_lang <- read_csv("data/can_lang.csv")
 ```
 
-Wait a minute! Nothing happened this time! Or at least it looks like that. But actually something did happen: the data was read in and now has the name `us_data` associated with it. 
+Wait a minute! Nothing happened this time! Or at least it looks like that. But actually, something did happen: the data was read in and now has the name `can_lang` associated with it. 
 And we can use that name to access the data frame and do things with it. First we will type the name of the data frame to print it to the screen.
 
 
@@ -414,4 +414,3 @@ ggplot(can_lang_filtered, aes(x = most_at_home,
   scale_y_log10(labels = scales::comma) +
   theme_bw()
 ```
-
