--- a/index.Rmd
+++ b/index.Rmd
@@ -189,7 +189,7 @@ and 6 columns:
 
 1. `category`: Higher level language category (describing whether the language is an Official Canadian language, an Aboriginal language, or a Non-Official and Non-Aboriginal language).
 2. `language`: Language queried about on the Canadian Census.
-3. `mother_tongue`: Total Count of Canadians from the Census who reported the language as their mother tongue. Mother tongue is generally defined as the language someone was exposed to since birth.
+3. `mother_tongue`: Total count of Canadians from the Census who reported the language as their mother tongue. Mother tongue is generally defined as the language someone was exposed to since birth.
 4. `most_at_home`: Total Count of Canadians from the Census who reported the language as spoken most often at home.
 5. `most_at_work`: Total Count of Canadians from the Census who reported the language as used most often at work for the population.
 6. `lang_known`: Total Count of Canadians from the Census who reported knowledge of language for the population in private households.
