--- a/index.Rmd
+++ b/index.Rmd
@@ -338,7 +338,7 @@ from a visualization.
 Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points on the 
 scatter plot we have already created by group/category. For example,
 given that we have the higher level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
-scatter plot to represent the higher level language category each language belongs to. 
+scatter plot to represent each language's higher-level language category.
 
 To do this we modify our scatter plot code above. Specifically, we will add an argument to the `aes` function, specifying that the points should be coloured by the `category` column:
 
