--- a/index.Rmd
+++ b/index.Rmd
@@ -361,7 +361,7 @@ no_most_at_home
 ```
 
 
-Let's remove these rows from the data frame`. 
+Let's remove these rows from the data frame. 
 To do this, we use the opposite of the equivalency operator (`==`) for our filter statement, the not equivalent operator (`!=`).
 
 ```{r}
