--- a/index.Rmd
+++ b/index.Rmd
@@ -381,7 +381,7 @@ ggplot(can_lang_filtered, aes(x = most_at_home, y = mother_tongue, color = categ
   scale_y_log10(labels = scales::comma)
 ```
 
-What do we see when considering the second part of our exploratory question? Do we see a pattern in the relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home for the different higher-level language categories? Probably not! 
+What do we see when considering the second part of our exploratory question? Do we see a difference in the pattern of the relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home between higher-level language categories? Probably not!
 
 For each higher-level language category there appears to be a positive relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home. This relationship looks similar, regardless of the category. 
 
