--- a/index.Rmd
+++ b/index.Rmd
@@ -385,7 +385,7 @@ What do we see when considering the second part of our exploratory question? Do 
 
 For each higher-level language category there appears to be a positive relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home. This relationship looks similar, regardless of the category. 
 
-Does this mean that the relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home is positive for all languages in the world? Or could we use this data visualization on its own to predict how many people have a given language as their mother tongue if we know how many people speak it as their primarly language at home?
+Does this mean that this relationship is positive for all languages in the world? Can we use this data visualization on its own to predict how many people have a given language as their mother tongue if we know how many people speak it as their primary language at home?
 
 The answer to both these questions is "no." What we can do with this exploratory data analysis is create new hypotheses, ideas, 
 and questions (like the ones at the beginning of this paragraph). Answering those questions would likely involve gathering additional data and doing more complex analyses, which we will 
