--- a/index.Rmd
+++ b/index.Rmd
@@ -387,7 +387,7 @@ For each higher-level language category there appears to be a positive relations
 
 Does this mean that this relationship is positive for all languages in the world? Can we use this data visualization on its own to predict how many people have a given language as their mother tongue if we know how many people speak it as their primary language at home?
 
-The answer to both these questions is "no." What we can do with this exploratory data analysis is create new hypotheses, ideas, 
+The answer to both these questions is "no." However, with this exploratory data analysis, we can create new hypotheses, ideas,
 and questions (like the ones at the beginning of this paragraph). Answering those questions would likely involve gathering additional data and doing more complex analyses, which we will 
 see more of later in this course.  
 
